moved to py files

--- a/archive/RLWM_executor.ipynb
+++ b/archive/RLWM_executor.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACT-R connection has been started.\n"
+     ]
+    }
+   ],
    "source": [
     "import random as rnd\n",
     "import numpy as np\n",
@@ -27,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,11 +71,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error #<SIMPLE-ERROR File \"/home/theodros/RLWM_ACTR/rlwm_model1.lisp\" which translates to #P\"/home/theodros/RLWM_ACTR/rlwm_model1.lisp\" does not exist.> occurred while trying to evaluate command \"load-act-r-model\" with parameters (\"/home/theodros/RLWM_ACTR/rlwm_model1.lisp\")\n",
+      "Command  present_stim  already exists and is now being replaced by  <function present_stim at 0x7f6282cfe6a8>\n",
+      "Cannot add command  present_stim  because it has already been added by a different owner.\n",
+      "Command  present_feedback  already exists and is now being replaced by  <function present_feedback at 0x7f6282cfe840>\n",
+      "Cannot add command  present_feedback  because it has already been added by a different owner.\n",
+      "Command  get_response  already exists and is now being replaced by  <function get_response at 0x7f6282cfe510>\n",
+      "Cannot add command  get_response  because it has already been added by a different owner.\n",
+      "Command \"get_response\" already on the after list for command \"output-key\".\n",
+      "#|Warning: Error \"Error (<class 'IndexError'>, IndexError('tuple index out of range'), <traceback object at 0x7f2a833f1f48>) while evaluating a command in Python for command: present_stim, model: RLWM_MODEL1, parameters: []\" while attempting to evaluate the form (\"present_stim\" NIL}) |#\n",
+      "    41.260   PROCEDURAL             CONFLICT-RESOLUTION\n",
+      "    41.260   ------                 Stopped because no events left to process\n",
+      "mean accuracy:  0.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Load model\n",
     "model = actr.load_act_r_model('/home/theodros/RLWM_ACTR/rlwm_model1.lisp')\n",
@@ -143,7 +170,6 @@
     "    \n",
     "    #waits for a key press?\n",
     "    actr.monitor_command(\"output-key\", 'get_response')\n",
-    "   
     "    actr.run(45)\n",
     "   \n",
     "\n",
@@ -200,23 +226,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-<<<<<<< HEAD
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
->>>>>>> 3d774c7442d6dd21a5527dfd9459046080638a65
    "source": [
     "\n"
    ]
@@ -238,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
